<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  
  <TextView 
    android:id="@+id/txt_name_label"
    android:text="@string/txt_geocontact_name"    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true" />  
  <EditText 
    android:id="@+id/txt_name_edit"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textCapWords"
    android:layout_below="@id/txt_name_label" />
    
  <TextView 
    android:id="@+id/txt_telephone_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_geocontact_cellnumber"    
    android:layout_below="@id/txt_name_edit" />
  <EditText 
    android:id="@+id/txt_telephone_edit"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="phone"
    android:layout_below="@id/txt_telephone_label" />
    
  <TextView
    android:id="@+id/txt_last_position_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_geocontact_last_position"    
    android:layout_below="@id/txt_telephone_edit" />
  <TextView
    android:id="@+id/txt_last_position"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt_last_position_label" />
      
  <TextView
    android:id="@+id/txt_note_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_geocontact_note"
    android:layout_below="@id/txt_last_position" />    
  <TextView
    android:id="@+id/txt_note"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt_note_label" />
 
  <TextView
    android:id="@+id/txt_date_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_geocontact_date"
    android:layout_below="@id/txt_note" />
  <TextView
    android:id="@+id/txt_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt_date_label" />

</RelativeLayout>
